--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="content">
 <section class="element"> 
 					<div class="name">Android Developer</div>
-					<div class="info">I'm a <i>beginner developer</i>. I love material design applied on apps.</div>
+					<div class="info">I'm a <i>beginner developer</i>. I love material design applied on applications.</div>
 					<div class="date">April 2017 - Now</div>
 			</section>
                         <hr align="left"/>
