--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <hr align="left"/>
 			<section class="element"> 
 					<div class="name">Web Designer</div>
-					<div class="info">I'm a <i>web designer</i>. I love anything related to web design, html and css.</div>
+					<div class="info">I'm a <i>web designer</i>. I love everything related to web design, html and css.</div>
 					<div class="date">May 2016 - Now</div>
 			</section>
 			<hr align="left"/>
