--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<section class="tab">
 		<div class="title"><i class="fa fa-envelope"></i>Contact</div>
 		<div class="content">
-			<div class="contacts"><a href="mailto:"><i class="fa fa-envelope"></i>&nbsp; E-Mail</a></div>
+			<div class="contacts"><a href="mailto:giorgio.canto98@gmail.com"><i class="fa fa-envelope"></i>&nbsp; E-Mail</a></div>
 			<div class="contacts"><a href="https://plus.google.com/+ГеоргийКалашников98/" target="_blank"><i class="fa fa-google-plus"></i>&nbsp; Google+</a></div>
 			<div class="contacts"><a href="https://github.com/folgore95/folgore95.github.io" target="_blank"><i class="fa fa-info"></i>&nbsp; Info</a></div>
 		</div>
