--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<h2 id="description">Developer</h2>
 		</div>
 		<a href="it">
-			<div class="btn">
+			<div class="lan">
 				<i class="fa fa-globe"></i>&nbsp;it
 			</div>
 		</a>
