--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 			<h1 id="name">Giorgio C (Folgore95)</h1>
 			<h2 id="description">Developer</h2>
 		</div>
+		<a href="it">
+			<div class="lan">
+				<i class="fa fa-globe"></i>&nbsp;it
+			</div>
+		</a>
 	</div>
 </header>
 <main>
