--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		</div>
 	</section>
 </div>
-<a href="mailto:">
+<a href="mailto:giorgio.canto98@gmail.com">
 	<div id="fab">&nbsp;<i class="fa fa-envelope"></i>&nbsp;</div>
 </a>
 </main>
