Preparing italian language
Signed-off by Giorgio Cantoni <giorgio.canto98@gmail.com>

--- a/it/index.html
+++ b/it/index.html
@@ -1,1 +1,110 @@
-Italian
+<!DOCTYPE html>
+<!--
+    Say hello to folgore95 :)
+    My personal website based on google's material design
+    Source of this website here: https://github.com/folgore95/folgore95.github.io
+    Fork your copy or download the zip and then start design
+-->
+<html lang="en">
+<head>
+	<title>Folgore95</title>
+        <meta charset="utf-8"/> <!-- Cyrillic characters -->
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<meta name="description" content="My Personal Website">
+	<meta name="author" content="Giorgio C (Folgore95)">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="theme-color" content="#ff0082fa">
+</head>
+<body>
+<div id="teal_bg"></div>
+<header>
+	<div id="quick_card" class="card">
+		<div id="photo_container">
+			<img id="photo" src="img/avatar.png" />
+		</div>
+		<div id="description_container">
+			<h1 id="name">Giorgio C (Folgore95)</h1>
+			<h2 id="description">Developer</h2>
+		</div>
+		<a href="it">
+			<div class="lan">
+				<i class="fa fa-globe"></i>&nbsp;it
+			</div>
+		</a>
+	</div>
+</header>
+<main>
+<div id="about_card" class="card">
+	<section class="tab">
+		<div class="title"><i class="fa fa-tachometer"></i>Experience</div>
+		<div class="content">
+<section class="element"> 
+					<div class="name">Android Developer</div>
+					<div class="info">I'm a <i>beginner developer</i>. I love material design applied on applications.</div>
+					<div class="date">April 2017 - Now</div>
+			</section>
+                        <hr align="left"/>
+			<section class="element"> 
+					<div class="name">Web Designer</div>
+					<div class="info">I'm a <i>web designer</i>. I love everything related to web design, html and css.</div>
+					<div class="date">May 2016 - Now</div>
+			</section>
+			<hr align="left"/>
+			<section class="element"> 
+					<div class="name"><a href="https://github.com/folgore95" target="_blank">Github</a></a></div>
+					<div class="info">My open-source websites, php codes, c++ programs and contributions for <i>Android</i> community.</div>
+			</section>
+		</div>
+	</section>
+	<section class="tab">
+		<div class="title"><i class="fa fa-suitcase"></i>Some of my Projects</div>
+		<div class="content">
+			<section class="element"> 
+				<div class="name">Kate Mobile - <a href="https://play.google.com/store/apps/details?id=com.perm.kate_new_6&hl=it" target="_blank">Google Play Store</a></div>
+				<div class="info">Kate Mobile is a popular vkontakte client. It is an Android app which has a lot of cool features. Available in many languages.</div>
+			</section>
+			<hr align="left"/>
+			<section class="element">
+				<div class="name">Substratum - <a href="https://play.google.com/store/apps/details?id=projekt.substratum&hl=it" target="_blank">Google Play Store</a></div>
+				<div class="info">Substratum is an app that takes advantage of Sony's Overlay Manager Service (OMS). I'm a collaborator and i translated app in italian.</div>
+			</section>
+                        <hr align="left"/>
+			<section class="element">
+				<div class="name">Static Shortcut - <a href="https://github.com/folgore95/staticshortcut" target="_blank">Source</a></div>
+				<div class="info">Static Shortcut is an Android app that shows Google's static app shortcuts (Android 7.1+)(API 25).</div>
+			</section>
+                        <hr align="left"/>
+			<section class="element">
+				<div class="name">Full Material - <a href="http://github.com/folgore95/fullmaterial" target="_blank">Website</a></div>
+				<div class="info">Another open source website that follows Google's material design guidelines.</div>
+			</section>
+                </div>
+	</section>
+	<section class="tab">
+		<div class="title"><i class="fa fa-graduation-cap"></i>Education</div>
+		<div class="content">
+			<section class="element">
+				<div class="name">Scientific high school</div>
+				<div class="date">(September 2012 - June 2017)</div>
+			</section>
+		</div>
+	</section>
+</div>
+<div id="contact_card" class="card"> <!-- You can use other icons by looking at the file "font-awesome.css" -->
+	<section class="tab">
+		<div class="title"><i class="fa fa-envelope"></i>Contact</div>
+		<div class="content">
+			<div class="contacts"><a href="mailto:giorgio.canto98@gmail.com"><i class="fa fa-envelope"></i>&nbsp; E-Mail</a></div>
+			<div class="contacts"><a href="https://plus.google.com/+ГеоргийКалашников98/" target="_blank"><i class="fa fa-google-plus"></i>&nbsp; Google+</a></div>
+			<div class="contacts"><a href="https://github.com/folgore95/folgore95.github.io" target="_blank"><i class="fa fa-info"></i>&nbsp; Info</a></div>
+		</div>
+	</section>
+</div>
+<a href="mailto:giorgio.canto98@gmail.com">
+	<div id="fab">&nbsp;<i class="fa fa-envelope"></i>&nbsp;</div>
+</a>
+</main>
+</body>
+</html>
