--- a/it/index.html
+++ b/it/index.html
@@ -26,11 +26,11 @@
 		</div>
 		<div id="description_container">
 			<h1 id="name">Giorgio C (Folgore95)</h1>
-			<h2 id="description">Developer</h2>
+			<h2 id="description">Sviluppatore</h2>
 		</div>
-		<a href="it">
+		<a href="https://folgore95.github.io">
 			<div class="lan">
-				<i class="fa fa-globe"></i>&nbsp;it
+				<i class="fa fa-globe"></i>&nbsp;en
 			</div>
 		</a>
 	</div>
@@ -38,18 +38,18 @@
 <main>
 <div id="about_card" class="card">
 	<section class="tab">
-		<div class="title"><i class="fa fa-tachometer"></i>Experience</div>
+		<div class="title"><i class="fa fa-tachometer"></i>Esperienza</div>
 		<div class="content">
 <section class="element"> 
-					<div class="name">Android Developer</div>
+					<div class="name">Sviluppatore Android</div>
 					<div class="info">I'm a <i>beginner developer</i>. I love material design applied on applications.</div>
-					<div class="date">April 2017 - Now</div>
+					<div class="date">Aprile 2017 - Ora</div>
 			</section>
                         <hr align="left"/>
 			<section class="element"> 
 					<div class="name">Web Designer</div>
 					<div class="info">I'm a <i>web designer</i>. I love everything related to web design, html and css.</div>
-					<div class="date">May 2016 - Now</div>
+					<div class="date">Maggio 2016 - Ora</div>
 			</section>
 			<hr align="left"/>
 			<section class="element"> 
@@ -59,7 +59,7 @@
 		</div>
 	</section>
 	<section class="tab">
-		<div class="title"><i class="fa fa-suitcase"></i>Some of my Projects</div>
+		<div class="title"><i class="fa fa-suitcase"></i>Alcuni dei miei Progetti</div>
 		<div class="content">
 			<section class="element"> 
 				<div class="name">Kate Mobile - <a href="https://play.google.com/store/apps/details?id=com.perm.kate_new_6&hl=it" target="_blank">Google Play Store</a></div>
@@ -83,18 +83,18 @@
                 </div>
 	</section>
 	<section class="tab">
-		<div class="title"><i class="fa fa-graduation-cap"></i>Education</div>
+		<div class="title"><i class="fa fa-graduation-cap"></i>Educazione</div>
 		<div class="content">
 			<section class="element">
-				<div class="name">Scientific high school</div>
-				<div class="date">(September 2012 - June 2017)</div>
+				<div class="name">Liceo scientico</div>
+				<div class="date">(Settembre 2012 - Giugno 2017)</div>
 			</section>
 		</div>
 	</section>
 </div>
 <div id="contact_card" class="card"> <!-- You can use other icons by looking at the file "font-awesome.css" -->
 	<section class="tab">
-		<div class="title"><i class="fa fa-envelope"></i>Contact</div>
+		<div class="title"><i class="fa fa-envelope"></i>Contatti</div>
 		<div class="content">
 			<div class="contacts"><a href="mailto:giorgio.canto98@gmail.com"><i class="fa fa-envelope"></i>&nbsp; E-Mail</a></div>
 			<div class="contacts"><a href="https://plus.google.com/+ГеоргийКалашников98/" target="_blank"><i class="fa fa-google-plus"></i>&nbsp; Google+</a></div>
