--- a/it/index.html
+++ b/it/index.html
@@ -42,7 +42,7 @@
 		<div class="content">
 <section class="element"> 
 					<div class="name">Sviluppatore Android</div>
-					<div class="info">I'm a <i>beginner developer</i>. I love material design applied on applications.</div>
+					<div class="info">Sono uno <i>sviluppatore principiante</i>. Amo il material design applicato alle applicazioni.</div>
 					<div class="date">Aprile 2017 - Ora</div>
 			</section>
                         <hr align="left"/>
