--- a/it/index.html
+++ b/it/index.html
@@ -42,13 +42,13 @@
 		<div class="content">
 <section class="element"> 
 					<div class="name">Sviluppatore Android</div>
-					<div class="info">Sono uno <i>sviluppatore principiante</i>. Amo il material design applicato alle applicazioni.</div>
+					<div class="info">Sono uno <i>sviluppatore principiante</i>. Amo il material design applicato sulle applicazioni.</div>
 					<div class="date">Aprile 2017 - Ora</div>
 			</section>
                         <hr align="left"/>
 			<section class="element"> 
 					<div class="name">Web Designer</div>
-					<div class="info">I'm a <i>web designer</i>. I love everything related to web design, html and css.</div>
+					<div class="info">Sono un <i>web designer</i>. Amo qualsiasi cosa legata al web design, html e css.</div>
 					<div class="date">Maggio 2016 - Ora</div>
 			</section>
 			<hr align="left"/>
