--- a/it/index.html
+++ b/it/index.html
@@ -54,7 +54,7 @@
 			<hr align="left"/>
 			<section class="element"> 
 					<div class="name"><a href="https://github.com/folgore95" target="_blank">Github</a></a></div>
-					<div class="info">My open-source websites, php codes, c++ programs and contributions for <i>Android</i> community.</div>
+					<div class="info">I miei siti web open source, codici php, programmi c++ e contribuzioni per la community di Android </div>
 			</section>
 		</div>
 	</section>
