--- a/it/index.html
+++ b/it/index.html
@@ -54,7 +54,7 @@
 			<hr align="left"/>
 			<section class="element"> 
 					<div class="name"><a href="https://github.com/folgore95" target="_blank">Github</a></a></div>
-					<div class="info">I miei siti web open source, codici php, programmi c++ e contribuzioni per la community di Android </div>
+					<div class="info">I miei siti web open source, codici php, programmi c++ e contribuzioni per la community di Android.</div>
 			</section>
 		</div>
 	</section>
@@ -72,12 +72,12 @@
 			</section>
                         <hr align="left"/>
 			<section class="element">
-				<div class="name">Static Shortcut - <a href="https://github.com/folgore95/staticshortcut" target="_blank">Source</a></div>
+				<div class="name">Static Shortcut - <a href="https://github.com/folgore95/staticshortcut" target="_blank">Sorgente</a></div>
 				<div class="info">Static Shortcut is an Android app that shows Google's static app shortcuts (Android 7.1+)(API 25).</div>
 			</section>
                         <hr align="left"/>
 			<section class="element">
-				<div class="name">Full Material - <a href="http://github.com/folgore95/fullmaterial" target="_blank">Website</a></div>
+				<div class="name">Full Material - <a href="http://github.com/folgore95/fullmaterial" target="_blank">Sito Web</a></div>
 				<div class="info">Another open source website that follows Google's material design guidelines.</div>
 			</section>
                 </div>
