--- a/it/index.html
+++ b/it/index.html
@@ -78,7 +78,7 @@
                         <hr align="left"/>
 			<section class="element">
 				<div class="name">Full Material - <a href="http://github.com/folgore95/fullmaterial" target="_blank">Sito Web</a></div>
-				<div class="info">Another open source website that follows Google's material design guidelines.</div>
+				<div class="info">Un altro sito web open source che segue le linee guida del material design di Google.</div>
 			</section>
                 </div>
 	</section>
