--- a/it/index.html
+++ b/it/index.html
@@ -73,7 +73,7 @@
                         <hr align="left"/>
 			<section class="element">
 				<div class="name">Static Shortcut - <a href="https://github.com/folgore95/staticshortcut" target="_blank">Sorgente</a></div>
-				<div class="info">Static Shortcut is an Android app that shows Google's static app shortcuts (Android 7.1+)(API 25).</div>
+				<div class="info">Static Shortcut è un'applicazione Android che mostra le scorciatoie statiche di Google (Android 7.1+)(API 25).</div>
 			</section>
                         <hr align="left"/>
 			<section class="element">
