--- a/it/index.html
+++ b/it/index.html
@@ -63,7 +63,7 @@
 		<div class="content">
 			<section class="element"> 
 				<div class="name">Kate Mobile - <a href="https://play.google.com/store/apps/details?id=com.perm.kate_new_6&hl=it" target="_blank">Google Play Store</a></div>
-				<div class="info">Kate Mobile is a popular vkontakte client. It is an Android app which has a lot of cool features. Available in many languages.</div>
+				<div class="info">Kate Mobile è un client popolare per vkontakte. È un'app Android con diverse caratteristiche. È disponibile in diverse lingue.</div>
 			</section>
 			<hr align="left"/>
 			<section class="element">
