--- a/it/index.html
+++ b/it/index.html
@@ -68,7 +68,7 @@
 			<hr align="left"/>
 			<section class="element">
 				<div class="name">Substratum - <a href="https://play.google.com/store/apps/details?id=projekt.substratum&hl=it" target="_blank">Google Play Store</a></div>
-				<div class="info">Substratum is an app that takes advantage of Sony's Overlay Manager Service (OMS). I'm a collaborator and i translated app in italian.</div>
+				<div class="info">Substratum è un'app che prende vantaggio del Sony's Overlay Manager Service (OMS). Sono un collaboratore ed ho tradotto l'app in italiano.</div>
 			</section>
                         <hr align="left"/>
 			<section class="element">
