--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 				<div class="name">Scientific high school</div>
 				<div class="date">(September 2012 - June 2017)</div>
 			</section>
+			<section class="element">
+				<div class="name">Computer engineering</div>
+				<div class="date">(October 2017 - Who knows)</div>
+			</section>
 		</div>
 	</section>
 </div>
