--- a/it/index.html
+++ b/it/index.html
@@ -89,6 +89,10 @@
 				<div class="name">Liceo scientico</div>
 				<div class="date">(Settembre 2012 - Giugno 2017)</div>
 			</section>
+			<section class="element">
+				<div class="name">Ingegneria informatica</div>
+				<div class="date">(Ottobre 2017 - Ora)</div>
+			</section>
 		</div>
 	</section>
 </div>
