--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			</section>
 			<section class="element">
 				<div class="name">Computer engineering</div>
-				<div class="date">(October 2017 - Who knows)</div>
+				<div class="date">(October 2017 - Now)</div>
 			</section>
 		</div>
 	</section>
