--- a/pixeltheme/index.html
+++ b/pixeltheme/index.html
@@ -31,11 +31,13 @@
           <div class="valign center">
           <br>
                 <img class="center-align" src="http://i63.tinypic.com/2e1b0k9.png">
-                <img class="center-align" src="http://i66.tinypic.com/e5lamx.png">
           <br><br><br>
         <a class="waves-effect blue accent-3 center-allign waves-light btn-large" href="https://github.com/folgore95/pixeltheme/releases/download/app_update/pixel_theme.apk"><i class="material-icons left"></i>DOWNLOAD</a>
 <p><a href="https://github.com/folgore95/pixeltheme/releases/tag/app_update" style="color:#757575">Version 1.0.1 - Changelog</a></p>
-          </div>
+		  <br> </br>
+	      <p class="light">What is themed?</p>
+	      <p><a href="" style="color:#757575">Version 1.0.1 - Changelog</a></p>
+	      </div>
           
             <div class="row">
         <div class="col s12 m12">
