--- a/pixeltheme/index.html
+++ b/pixeltheme/index.html
@@ -36,7 +36,8 @@
 <p><a href="https://github.com/folgore95/pixeltheme/releases/tag/app_update" style="color:#757575">Version 1.0.1 - Changelog</a></p>
 		  <br> </br>
 	      <p class="light">What is themed?</p>
-	      <p><a href="" style="color:#757575">Version 1.0.1 - Changelog</a></p>
+ 	      <p><a href="" style="color:#757575">• Navigation Bar ( Filled, Stock AOSP, Stock Google Pixel )</a></p>
+	      <p><a href="" style="color:#757575">• SystemUI ( Stock Google Pixel blue color, Stock Nexus teal color, Grey, Red, Purple, Orange, Green and Indigo )</a></p>
 	      </div>
           
             <div class="row">
