--- a/pixeltheme/index.html
+++ b/pixeltheme/index.html
@@ -30,7 +30,7 @@
       <div class="container">
           <div class="valign center">
           <br>
-                <img class="center-align" src="https://i.imgur.com/U908wdZ.jpg">
+                <img class="center-align" src="http://i64.tinypic.com/2w2moaw.png">
           <br><br><br>
         <a class="waves-effect blue accent-3 center-allign waves-light btn-large" href="https://github.com/folgore95/pixeltheme/releases/download/app_update/pixel_theme.apk"><i class="material-icons left"></i>DOWNLOAD</a>
 <p><a href="https://github.com/folgore95/pixeltheme/releases/tag/app_update" style="color:#757575">Version 1.0.1 - Changelog</a></p>
