--- a/pixeltheme/index.html
+++ b/pixeltheme/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Pixel Theme | Substratum</title>
-        <meta name="description" content="Builds for pixel theme.">
+        <meta name="description" content="Download Pixel Theme for Substratum.">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>
     <style>
         body {
