--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 				<div class="info">Kate Mobile is a popular vkontakte client. It is an Android app which has a lot of cool features. Available in many languages.</div>
 			</section>
 			<hr align="left"/>
+			<section class="element"> 
+				<div class="name">Pixel Theme - <a href="https://play.google.com/store/apps/details?id=it.folgore95.pixel" target="_blank">Google Play Store</a></div>
+				<div class="info">A Google Pixel theme for every device with AOSP running substratum (OMS).</div>
+			</section>
+			<hr align="left"/>
 			<section class="element">
 				<div class="name">Substratum - <a href="https://play.google.com/store/apps/details?id=projekt.substratum&hl=it" target="_blank">Google Play Store</a></div>
 				<div class="info">Substratum is an app that takes advantage of Sony's Overlay Manager Service (OMS). I'm a collaborator and i translated app in italian.</div>
@@ -75,7 +80,12 @@
 				<div class="name">Static Shortcut - <a href="https://github.com/folgore95/staticshortcut" target="_blank">Source</a></div>
 				<div class="info">Static Shortcut is an Android app that shows Google's static app shortcuts (Android 7.1+)(API 25).</div>
 			</section>
-                        <hr align="left"/>
+                        <hr align="left"/><section class="element"> 
+				<div class="name">Material Web - <a href="https://github.com/folgore95/materialweb" target="_blank">Source</a></div>
+				<div class="info">Your personal Android app based on Google's material design.</div>
+			</section>
+			<hr align="left"/>
+			
 			<section class="element">
 				<div class="name">Full Material - <a href="http://github.com/folgore95/fullmaterial" target="_blank">Website</a></div>
 				<div class="info">Another open source website that follows Google's material design guidelines.</div>
