--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<hr align="left"/>
 			<section class="element"> 
 				<div class="name">Pixel Theme - <a href="https://play.google.com/store/apps/details?id=it.folgore95.pixel" target="_blank">Google Play Store</a></div>
-				<div class="info">A Google Pixel theme for every device with AOSP running substratum (OMS).</div>
+				<div class="info">A Google Pixel theme for every device with AOSP running substratum (Android 8.0+).</div>
 			</section>
 			<hr align="left"/>
 			<section class="element">
