Added new projects
Signed-off-by: Giorgio Cantoni <giorgio.canto98@gmail.com>

--- a/it/index.html
+++ b/it/index.html
@@ -66,6 +66,11 @@
 				<div class="info">Kate Mobile è un client popolare per vkontakte. È un'app Android con diverse caratteristiche. È disponibile in diverse lingue.</div>
 			</section>
 			<hr align="left"/>
+			<section class="element"> 
+				<div class="name">Pixel Theme - <a href="https://play.google.com/store/apps/details?id=it.folgore95.pixel" target="_blank">Google Play Store</a></div>
+				<div class="info">Un tema Google Pixel per ogni dispositivo che utilizza substratum (Android 8.0+).</div>
+			</section>
+			<hr align="left"/>
 			<section class="element">
 				<div class="name">Substratum - <a href="https://play.google.com/store/apps/details?id=projekt.substratum&hl=it" target="_blank">Google Play Store</a></div>
 				<div class="info">Substratum è un'app che prende vantaggio del Sony's Overlay Manager Service (OMS). Sono un collaboratore ed ho tradotto l'app in italiano.</div>
@@ -76,6 +81,11 @@
 				<div class="info">Static Shortcut è un'applicazione Android che mostra le scorciatoie statiche di Google (Android 7.1+)(API 25).</div>
 			</section>
                         <hr align="left"/>
+			<section class="element"> 
+				<div class="name">Material Web - <a href="https://github.com/folgore95/materialweb" target="_blank">Sorgente</a></div>
+				<div class="info">La tua applicazione Android personale basata sul material design di Google.</div>
+			</section>
+			<hr align="left"/>
 			<section class="element">
 				<div class="name">Full Material - <a href="http://github.com/folgore95/fullmaterial" target="_blank">Sito Web</a></div>
 				<div class="info">Un altro sito web open source che segue le linee guida del material design di Google.</div>
