--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 -->
 <html lang="en">
 <head>
-	<   title   >  Valentina  </   title   >
-        < meta  charset = "utf-8" />  <! - caratteri cirillici ->
+	<title>Valentina</title>
+        <meta charset="utf-8"/> <!-- Cyrillic characters -->
         <link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
