--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<img id="photo" src="img/avatar.png" />
 		</div>
 		<div id="description_container">
-			<h1 id="name">Giorgio C (Folgore95)</h1>
+			<h1 id="name">Valentina Rota</h1>
 			<h2 id="description">Developer</h2>
 		</div>
 		<a href="it">
