--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header>
 	<div id="quick_card" class="card">
 		<div id="photo_container">
-			<img id="photo" src="img/avatar.png" />
+			<img id="photo" src="img/Avatar.jpg" />
 		</div>
 		<div id="description_container">
 			<h1 id="name">Valentina Rota</h1>
